--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,18 @@
 *.exe
 *.out
 *.app
+/Debug/Minimali.3CC6B850.tlog/CL.command.1.tlog
+/Debug/Minimali.3CC6B850.tlog/CL.read.1.tlog
+/Debug/Minimali.3CC6B850.tlog/CL.write.1.tlog
+/Debug/Minimali.3CC6B850.tlog/link.command.1.tlog
+/Debug/Minimali.3CC6B850.tlog/link.read.1.tlog
+/Debug/Minimali.3CC6B850.tlog/link.write.1.tlog
+/Debug/Minimali.3CC6B850.tlog/Minimalizacja_gen.lastbuildstate
+/Debug/Minimalizacja_gen.log
+/Debug/onp.obj.enc
+/Debug/utility.obj.enc
+/Debug/vc140.idb
+/Debug/vc140.pdb
+/Minimalizacja_gen.vcxproj
+/Minimalizacja_gen.vcxproj.filters
+/Minimalizacja_gen.vcxproj.user
